# Blog

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  start.sh
blog/: Cargo.toml  Dockerfile  config.toml
blog/src/: config.rs  db.rs  error.rs  form.rs  main.rs  model.rs
blog/src/handler/: auth.rs  register.rs  topic.rs
docs/: blog.sql  blog_nginx.conf.example  config.toml.example  nginx.conf
nginx/: Dockerfile  nginx.conf
nginx/assets/: 404.html  backend.js  index.html
nginx/static/: backend.html
scripts/: blog.sql
src/: config.rs  db.rs  error.rs  handler.rs  lib.rs  main.rs  model.rs  password.rs  rds.rs  session.rs
src/db/: topic.rs  user.rs
src/handler/: admin.rs  auth.rs  backend.rs  frontend.rs  login.rs  register.rs  topic.rs
static/: 404.html  backend.html  backend.js  frontend.html  frontend.js  index.html  login.html  register.html
