[package]
name = "blog"
version = "2.3.0"
edition = "2021"
authors = ["EndlessParadox1"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/EndlessParadox1/Blog"
description = "Just a demo blog implemented by axum."

[dependencies]
axum = { version = "0.6.20", features = ["headers"]}
tokio = {version="1.34.0", features = ["full"]}
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
tokio-postgres = "0.7.10"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = {version = "0.11.0", features = ["serde"]}
config = "0.13.3"
pulldown-cmark = "0.9.3"
chrono = "0.4.31"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
once_cell = "1.18.0"
bcrypt = "0.15.0"
regex = "1.10.2"
redis = {version = "0.23.3", features = ["aio", "tokio-comp"]}
uuid = {version = "1.5.0", features = ["v4"]}
